Move Budapest to past events

--- a/index.html
+++ b/index.html
@@ -51,21 +51,6 @@
       <div class="cf" role="main">
 
         <section class="event cf">
-          <img src="img/budapest.jpg" alt="Budapest" />
-          <a href="https://www.flickr.com/photos/aigle_dore/8130437015" class="photo-credit">Photo by Moyan Brenn</a>
-          <div class="event-description">
-            <div class="event-description-inner">
-              <h2>Budapest</h2>
-              <!-- <div class="event-past-badge">Past Event</div> -->
-              <p>November 21st 2014</p>
-              <p><a href="http://oneshot.risingstack.com/">oneshot.risingstack.com</a></p>
-            </div>
-          </div>
-          <!-- event-description -->
-        </section>
-        <!-- event -->
-
-        <section class="event cf">
           <img src="img/oakland.jpg" alt="Oakland" />
           <a href="https://www.flickr.com/photos/xbleh/10938040253" class="photo-credit">Photo by Kevin Zamani</a>
           <div class="event-description">
@@ -108,7 +93,20 @@
         </section>
         <!-- event -->
 
-
+        <section class="event cf">
+          <img src="img/budapest.jpg" alt="Budapest" />
+          <a href="https://www.flickr.com/photos/aigle_dore/8130437015" class="photo-credit">Photo by Moyan Brenn</a>
+          <div class="event-description">
+            <div class="event-description-inner">
+              <h2>Budapest</h2>
+              <div class="event-past-badge">Past Event</div>
+              <p>November 21st 2014</p>
+              <p><a href="http://oneshot.risingstack.com/">oneshot.risingstack.com</a></p>
+            </div>
+          </div>
+          <!-- event-description -->
+        </section>
+        <!-- event -->
 
       </div>
       <!-- main -->
