--- a/index.html
+++ b/index.html
@@ -51,19 +51,6 @@
       <div class="cf" role="main">
 
         <section class="event cf">
-          <img src="img/oakland.jpg" alt="Oakland" />
-          <a href="https://www.flickr.com/photos/xbleh/10938040253" class="photo-credit">Photo by Kevin Zamani</a>
-          <div class="event-description">
-            <div class="event-description-inner">
-              <h2>Oakland</h2>
-              <p>December 10th 2014</p>
-              <p><a href="http://oakland.jsfest.com/">oakland.jsfest.com</a></p>
-            </div>
-          </div>
-          <!-- event-description -->
-        </section>
-
-        <section class="event cf">
           <img src="img/brussels.jpg" alt="Brussels" />
           <a href="https://www.flickr.com/photos/jorge-11/8704930508" class="photo-credit">Photo by George M. Groutas</a>
           <div class="event-description">
@@ -102,6 +89,21 @@
               <div class="event-past-badge">Past Event</div>
               <p>November 21st 2014</p>
               <p><a href="http://oneshot.risingstack.com/">oneshot.risingstack.com</a></p>
+            </div>
+          </div>
+          <!-- event-description -->
+        </section>
+        <!-- event -->
+
+        <section class="event cf">
+          <img src="img/oakland.jpg" alt="Oakland" />
+          <a href="https://www.flickr.com/photos/xbleh/10938040253" class="photo-credit">Photo by Kevin Zamani</a>
+          <div class="event-description">
+            <div class="event-description-inner">
+              <h2>Oakland</h2>
+              <div class="event-past-badge">Past Event</div>
+              <p>December 10th 2014</p>
+              <p><a href="http://oakland.jsfest.com/">oakland.jsfest.com</a></p>
             </div>
           </div>
           <!-- event-description -->
