Add event block for christchurch

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
         <!-- event -->
 
         <section class="event cf">
+          <img src="img/christchurch.jpg" alt="Christchurch" />
+          <a href="https://www.flickr.com/photos/jnimmo/8111965750" class="photo-credit">Photo by James Nimmo</a>
+          <div class="event-description">
+            <div class="event-description-inner">
+              <h2>Christchurch</h2>
+              <!-- <div class="event-past-badge">Past Event</div> -->
+              <p>March 28th 2015</p>
+              <p><a href="http://christchurch.nodeconf.com/">christchurch.nodeconf.com</a></p>
+            </div>
+          </div>
+          <!-- event-description -->
+        </section>
+        <!-- event -->
+
+        <section class="event cf">
           <img src="img/london.jpg" alt="London" />
           <a href="https://www.flickr.com/photos/danrocha/8839675861/" class="photo-credit">Photo by Dan Rocha</a>
           <div class="event-description">
