--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@
         <!-- event -->
 
         <section class="event cf">
+          <img src="img/oslo.jpg" alt="Oslo" />
+          <a href="https://www.flickr.com/photos/jorneriksson/15168077058" class="photo-credit">Photo by Jørn Eriksson</a>
+          <div class="event-description">
+            <div class="event-description-inner">
+              <h2>Oslo</h2>
+              <!-- <div class="event-past-badge">Past Event</div> -->
+              <p>May 23rd 2015</p>
+              <p><a href="http://oslo.nodeconf.com/">oslo.nodeconf.com</a></p>
+            </div>
+          </div>
+          <!-- event-description -->
+        </section>
+        <!-- event -->
+
+        <section class="event cf">
           <img src="img/london.jpg" alt="London" />
           <a href="https://www.flickr.com/photos/danrocha/8839675861/" class="photo-credit">Photo by Dan Rocha</a>
           <div class="event-description">
