Set christchurch to past event, remove brussels

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
       <div class="cf" role="main">
 
         <section class="event cf">
-          <img src="img/brussels.jpg" alt="Brussels" />
-          <a href="https://www.flickr.com/photos/jorge-11/8704930508" class="photo-credit">Photo by George M. Groutas</a>
+          <img src="img/oslo.jpg" alt="Oslo" />
+          <a href="https://www.flickr.com/photos/jorneriksson/15168077058" class="photo-credit">Photo by Jørn Eriksson</a>
           <div class="event-description">
             <div class="event-description-inner">
-              <h2>Brussels</h2>
+              <h2>Oslo</h2>
               <!-- <div class="event-past-badge">Past Event</div> -->
-              <p>February 2015</p>
-              <p><a href="http://brussels.nodeconf.com/">brussels.nodeconf.com</a></p>
+              <p>May 23rd 2015</p>
+              <p><a href="http://oslo.nodeconf.com/">oslo.nodeconf.com</a></p>
             </div>
           </div>
           <!-- event-description -->
@@ -71,24 +71,9 @@
           <div class="event-description">
             <div class="event-description-inner">
               <h2>Christchurch</h2>
-              <!-- <div class="event-past-badge">Past Event</div> -->
+              <div class="event-past-badge">Past Event</div>
               <p>March 28th 2015</p>
               <p><a href="http://christchurch.nodeconf.com/">christchurch.nodeconf.com</a></p>
-            </div>
-          </div>
-          <!-- event-description -->
-        </section>
-        <!-- event -->
-
-        <section class="event cf">
-          <img src="img/oslo.jpg" alt="Oslo" />
-          <a href="https://www.flickr.com/photos/jorneriksson/15168077058" class="photo-credit">Photo by Jørn Eriksson</a>
-          <div class="event-description">
-            <div class="event-description-inner">
-              <h2>Oslo</h2>
-              <!-- <div class="event-past-badge">Past Event</div> -->
-              <p>May 23rd 2015</p>
-              <p><a href="http://oslo.nodeconf.com/">oslo.nodeconf.com</a></p>
             </div>
           </div>
           <!-- event-description -->
