Indicate Oslo event is past event

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="event-description">
             <div class="event-description-inner">
               <h2>Oslo</h2>
-              <!-- <div class="event-past-badge">Past Event</div> -->
+              <div class="event-past-badge">Past Event</div>
               <p>May 23rd 2015</p>
               <p><a href="http://oslo.nodeconf.com/">oslo.nodeconf.com</a></p>
             </div>
